facing error in displaying target Exercises

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_RAPID_API_KEY=a1b394b2abmshb8018ed805070a2p10af3bjsna1a2180e72f5
+REACT_APP_RAPID_API_KEY=a1b394b2abmshb8018ed805070a2p10af3bjsna1a2180e72f5 
+# above key is my rapid api key for exerciseDB
